--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "firebase": "^9.14.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
